# OpenGL-Game

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  main.cpp
.github/workflows/: deploy_to_github_pages.yml
engine/: CMakeLists.txt
engine/include/engine/: application.hpp  core.hpp  events.hpp  renderer.hpp  utilities.hpp
engine/src/: application.cpp  core.cpp  renderer.cpp  utilities.cpp
game/: CMakeLists.txt
game/include/game/: game.hpp
game/src/: boids.cpp  game.cpp  game_of_life.cpp  startup.cpp
scripts/: build-all.ps1  build.ps1
src/: main.cpp
src-web/: index.html
web/: package-lock.json  package.json
web/public/: index.css  index.html  index.js
web/scripts/: build.mjs
